# botanim-bot

./: README.md  pyproject.toml
botanim_bot/: bot.py  message_texts.py
