[tool.poetry]
name = "botanim-bot"
version = "0.1.0"
description = ""
authors = ["Anton <anton.vosc@gmail.com>"]
readme = "README.md"
packages = [{include = "botanim_bot"}]

[tool.poetry.dependencies]
python = "^3.12"
python-telegram-bot = "^21.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
